[life-xp-activity-service-23] implement getActivityById method
