# life-xp-activity-service-application/src/main/java/com/bladestepapp/lifexpactivityserviceapplication/mappers/ActivityResponseMapper.java
@@ -1,0 +1,11 @@
+package com.bladestepapp.lifexpactivityserviceapplication.mappers;
+
+import com.bladestepapp.lifexpactivityservicecore.domain.Activity;
+import com.bladestepapp.lifexpactivityservicecore.models.ActivityResponseModel;
+import org.mapstruct.Mapper;
+
+@Mapper(componentModel = "spring")
+public interface ActivityResponseMapper {
+
+    ActivityResponseModel map(Activity activity);
+}
