# life-xp-activity-service-core/src/main/java/com/bladestepapp/lifexpactivityservicecore/models/ActivityResponseModel.java
@@ -1,0 +1,19 @@
+package com.bladestepapp.lifexpactivityservicecore.models;
+
+import com.bladestepapp.lifexpactivityservicecore.domain.enums.ActivityCategory;
+import com.bladestepapp.lifexpactivityservicecore.domain.enums.ActivityUnit;
+import lombok.Data;
+
+@Data
+public class ActivityResponseModel {
+
+    private String name;
+
+    private String description;
+
+    private ActivityCategory category;
+
+    private ActivityUnit unit;
+
+    private double baseXp;
+}
